# Health-Monitoring-with-Theta-Middleware

./: .gitignore  README.md  package-lock.json
.github/workflows/: main.yml
1stTry/Theta/: config.js  createAddress.js  createAddress2.js  createSeed.js  firebase script.txt  getTransaction.js  mongoConn.js  package.json  sendTransaction.js
2ndtry/: config.json  index.js  package.json
Data/: HealthData.csv
IT Admin Panel/: package-lock.json  package.json
IT Admin Panel/public/: index.html
IT Admin Panel/src/: App.js  Config.js  Firebase.js  Route.js  index.js
JavaScript/2ndtry/: config.json  index.js  package.json
Machine Learning/: SkLearnCode.ipynb  TensorflowCode.ipynb  Training_Data.ipynb
Machine Learning/Json Model/: model.json
Middleware/: README.md
Middleware/Rust/author/: Cargo.toml
Middleware/Rust/author/src/: main.rs
Middleware/Rust/author/src/api_author/: announce.rs  send_message.rs
Mobile App/: README.md  app.json  package-lock.json  package.json
Mobile App/ReactApp/: App.js  (+4 more)
Socket Test/: client.js  package-lock.json  package.json  server.js
Testing/: index.js  package-lock.json  package.json
Web App/: .package-lock.json.swp  .package-lock_BASE_1943.json.swp  .package-lock_LOCAL_1943.json.swp  .package-lock_REMOTE_1943.json.swp  README.md  package-lock.json  package-lock_LOCAL_1943.json  package.json
admin-portal/: package-lock.json  package.json
javascript-starter/: .env  MLTesting.js  index.js  package-lock.json  package.json
raspberry-pi-app/: package-lock.json  package.json
theta-react-boilerplate/: package.json
(+214 files in other folders)
