[package]
name = "author"
version = "0.1.0"
authors = ["Noman Nasir Minhas <sp17bsse010@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota-streams = { git = "https://github.com/iotaledger/streams" }
failure = "0.1"
iota-lib-rs = "0.4"